--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ url:
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/algoprog-blog"
+baseurl: ""
 
 #
 # !! You don't need to change any of the configuration flags below !!
@@ -85,4 +85,4 @@ exclude:
   - README.md
   - CNAME
 
-theme: jekyll-theme-dinky
+#theme: jekyll-theme-dinky
